--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -20,12 +20,12 @@
                 <li>Pricing</li>
                 <li>Time</li>
                 <li><a href="" class="btn-primary btn-free" >Free trail</a></li>
-             </ul>  
+             </ul>
         </div>
         <h1>Best Software Landingpage</h1>
         <div class="btn-group">
             <a href="" class="btn-primary">get started now</a>
-            <a href=""  class="btn-secondary">learn more</a>
+            <a href="" class="btn-secondary">learn more</a>
         </div>
     </div>
     <div class="page-company">
@@ -92,7 +92,7 @@
     </div>
     <div class="page-software">
         <div></div>
-        <h2>Grab Your  Software With Amazing  Features</h2>
+        <h2>Grab Your Software With Amazing Features</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
         </p>
@@ -120,7 +120,7 @@
                 <h2>Meet With Future Landingpage</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
                 <div class="note">
-                  <p>Available now</p>  
+                    <p>Available now</p>
                 </div>
                 
                 <ul>
@@ -136,7 +136,7 @@
             <div></div>
             <h2>Limpon Is Suitable For Anytype LandingPage</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <a href=""class="btn-primary">Get Started Now</a>
+            <a href="" class="btn-primary">Get Started Now</a>
             <img src="img/Слой 2.png">
         </div>
     </div>
@@ -154,8 +154,6 @@
         <img src="img/Слой 4.jpg">
     </div>
 
-
-
     <div class="page-clients">
         <h2><span>testimonials</span>Our Happy Clients</h2>
         <div class="box-clients">
@@ -163,17 +161,17 @@
                 <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
                 <p class="name">Rolin B. Mirano</p>
                 <p class="position">ceo, uihub</p>
-            </div>            
+            </div>
             <div>
                 <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
                 <p class="name">Rolin B. Mirano</p>
                 <p class="position">ceo, uihub</p>
-            </div>            
+            </div>
             <div>
                 <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
                 <p class="name">Rolin B. Mirano</p>
                 <p class="position">ceo, uihub</p>
-            </div>            
+            </div>
         </div>
     </div>
     <div class="page-plan">
@@ -190,7 +188,7 @@
                     <li>Free Hosting Name</li>
                     <li>24x7 Online Support</li>
                 </ul>
-                <a href=""class="btn-info">choose plan</a>
+                <a href="" class="btn-info">choose plan</a>
             </div>
             <div class="box-price-item-active">
                 <h3><span>$</span>90<span>/m</span></h3>
@@ -221,7 +219,7 @@
         </div>
     </div>
     <div class="page-team">
-        <h2> <span>angels</span>Our Team</h2>
+        <h2><span>angels</span> Our Team</h2>
         <div class="box-team">
             <div>
                 <p>founder</p>
@@ -238,18 +236,17 @@
         </div>
     </div>
     <div class="page-form">
-        <h2> Start Your Trail No Need Credit Card
-        </h2>
+        <h2> Start Your Trail No Need Credit Card</h2>
         <form action="">
             <input type="text" placeholder="Enter your name here" name="">
             <input type="email" placeholder="Enter your email here" name="">
-            <textarea type="textMessage" placeholder="Enter your message here" name=""></textarea> 
-            <button type="submit"class="btn-primary"><span>Submit now</span></button>
+            <textarea type="textMessage" placeholder="Enter your message here" name=""></textarea>
+            <button type="submit" class="btn-primary"><span>Submit now</span></button>
         </form>
     </div>
     <div class="footer">
         <div>
-            <p>Made With Love & Copyright By - <a href="">Limpon</a></p>
+            <p>Made With Love & Copyright By — <a href="">Limpon</a></p>
             <ul class="social">
                 <li><a href="" target="_blank"></a></li>
                 <li><a href="" target="_blank"></a></li>
