--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -10,93 +10,100 @@
 </head>
 <body>
     <div class="page-header">
-        <div>
-            <a href=""></a>
+        <div class="wrap box-header">
+            <a href="" class="logo"></a>
             <ul class="nav">
-                <li>Home</li>
-                <li>Features</li>
-                <li>Video</li>
-                <li>Screens</li>
-                <li>Pricing</li>
-                <li>Time</li>
+                <li><a href="" class="nav-item">Home</a></li>
+                <li><a href="" class="nav-item">Features</a></li>
+                <li><a href="" class="nav-item">Video</a></li>
+                <li><a href="" class="nav-item">Screens</a></li>
+                <li><a href="" class="nav-item">Pricing</a></li>
+                <li><a href="" class="nav-item">Team</a></li>
                 <li><a href="" class="btn-primary btn-free" >Free trail</a></li>
-             </ul>
+             </ul>  
         </div>
-        <h1>Best Software Landingpage</h1>
-        <div class="btn-group">
-            <a href="" class="btn-primary">get started now</a>
-            <a href="" class="btn-secondary">learn more</a>
+        <div class="wrap">
+            <h1>Best Software Landingpage</h1>
+            <div class="btn-group">
+               <a href="" class="btn-primary">get started now</a>
+               <a href=""  class="btn-secondary">learn more</a>
+            </div>
         </div>
+        <div class="screen-img"></div>
     </div>
     <div class="page-company">
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="list-company">
+            <li class="list-company-item company-one"></li>
+            <li class="list-company-item company-two"></li>
+            <li class="list-company-item company-three"></li>
+            <li class="list-company-item company-four"></li>
         </ul>
     </div>
     <div class="page-grid">
         <div class="grid">
-            <h2><span>Features</span>Best Features Ever Seen</h2>
-            <div class="grid-item">
-                <div></div>
+            <h2 class="grid-title title-40"><span>Features</span>Best Features Ever Seen</h2>
+            <div class="grid-item grid-item-1">
+                <div class="grid-icon grid-icon-1"></div>
                 <h3>Well Documented</h3>
                 <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
                 <a href="">Read Mores</a>
             </div>
-            <div class="grid-item">
-                <div></div>
+            <div class="grid-item grid-item-2">
+                <div class="grid-icon grid-icon-2"></div>
                 <h3>Highly Customizeable</h3>
                 <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
                 <a href="">Read Mores</a>
             </div>
-            <div class="grid-item">
-                <div></div>
+            <div class="grid-item grid-item-3">
+                <div class="grid-icon grid-icon-3"></div>
                 <h3>Mobile Friednly Design</h3>
                 <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
                 <a href="">Read Mores</a>
             </div>
-            <div class="grid-item">
-                <div></div>
-                <h3>Responsive Design</h3>
-                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-                <a href="">Read Mores</a>
-            </div>
-            <div class="grid-item">
-                <div></div>
-                <h3>24/7 Online Support</h3>
-                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-                <a href="">Read Mores</a>
-            </div>
-            <div class="grid-item">
-                <div></div>
+            <div class="grid-item grid-item-4">
+                <div class="grid-icon grid-icon-4"></div>
                 <h3>Easy To Edit</h3>
                 <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
                 <a href="">Read Mores</a>
             </div>
-            <div>
+            <div class="grid-item grid-item-5">
+                <div class="grid-icon grid-icon-5"></div>
+                <h3>Responsive Design</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read Mores</a>
+            </div>
+            <div class="grid-item grid-item-6">
+                <div class="grid-icon grid-icon-6"></div>
+                <h3>24/7 Online Support</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read Mores</a>
+            </div>
+            <div class="grid-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 <p> <span>Rosalina Pong</span>-Founder, uithemes</p>
             </div>
         </div>
     </div>
     <div class="page-subscribe">
-        <div>
-            <h2><span>Subscribe</span>Signup For A Trail</h2>
-            <p>Create your free account now & get 30 days free trail No credit card required</p>
-            <input type="email" placeholder="Enter your email address">
-            <button type="submit" class="btn-primary">Subscribe</button>
+        <div class="wrap box-subscribe">
+            <div class="box-subscribe-child">
+                <h2 class="title-h2"><span>Subscribe</span>Signup For A Trail</h2>
+                <p class="box-subscribe-text">Create your free account now & get 30 days free trail No credit card required</p>
+                <div class="box-subscribe-user">
+                    <input type="email" placeholder="Enter your email address">
+                    <button type="submit" class="btn-primary">Subscribe</button>
+                </div>
+            </div>
+            <img src="img/Robot.png" alt="Robot">
         </div>
-        <img src="img/Robot.png" alt="Robot">
     </div>
     <div class="page-software">
-        <div></div>
-        <h2>Grab Your Software With Amazing Features</h2>
+        <div class="page-softwere-icon"></div>
+        <h2 class="title-h2">Grab Your  Software With Amazing  Features</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
         </p>
-        <dl>
+        <dl class="page-software-list">
             <dt>01. Clean Design</dt>
             <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
             <dt>02. Easy To Customize</dt>
@@ -104,9 +111,9 @@
         </dl>
     </div>
     <div class="page-stat">
-        <div>
-            <h2><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
-            <ul>
+        <div class="wrap">
+            <h2 class="title-h2"><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
+            <ul class="list-stat">
                 <li><span>53K</span>layouts</li>
                 <li><span>10K</span>projects</li>
                 <li><span>12K</span>cup coffee</li>
@@ -120,9 +127,8 @@
                 <h2>Meet With Future Landingpage</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
                 <div class="note">
-                    <p>Available now</p>
+                  <p>Available now</p>  
                 </div>
-                
                 <ul>
                     <li><a href="" target="_blank"></a></li>
                     <li><a href="" target="_blank"></a></li>
@@ -145,17 +151,17 @@
             <div></div>
             <h2>Easy To Etid & Very Easily Control</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <a href=""class="btn-primary">Learn More</a>
+            <a href="" class="btn-primary">Learn More</a>
         </div>
         <img src="img/Слой 8.png">
     </div>  
     <div class="page-screen">
-        <h2><span>screen preview</span>Screenshot With Details</h2>
-        <img src="img/Слой 4.jpg">
+        <h2 class="title-40"><span>screen preview</span>Screenshot With Details</h2>
+        <img class="screen" src="img/Слой 4.jpg" alt="Screen">
     </div>
-
     <div class="page-clients">
-        <h2><span>testimonials</span>Our Happy Clients</h2>
+        <div class="wrap">
+            <h2><span>testimonials</span>Our Happy Clients</h2>
         <div class="box-clients">
             <div>
                 <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
@@ -173,10 +179,12 @@
                 <p class="position">ceo, uihub</p>
             </div>
         </div>
+        </div>
     </div>
     <div class="page-plan">
-        <h2><span>our plans</span>Pricing Plans</h2>
-        <div class="box-price">
+        <div class="wrap">
+            <h2 class="title-40"><span>our plans</span>Pricing Plans</h2>
+            <div class="box-price">
             <div class="box-price-item">
                 <h3>Free</h3>
                 <p><strong>starter</strong></p>
@@ -190,7 +198,7 @@
                 </ul>
                 <a href="" class="btn-info">choose plan</a>
             </div>
-            <div class="box-price-item-active">
+            <div class="box-price-item active">
                 <h3><span>$</span>90<span>/m</span></h3>
                 <p><strong>starter</strong></p>
                 <ul>
@@ -201,7 +209,7 @@
                     <li>Free Hosting Name</li>
                     <li>24x7 Online Support</li>
                 </ul>
-                <a href=""class="btn-primary">choose plan</a>
+                <a href="" class="btn-primary">choose plan</a>
             </div>
             <div class="box-price-item">
                 <h3><span>$</span>350<span>/m</span></h3>
@@ -214,12 +222,14 @@
                     <li>Free Hosting Name</li>
                     <li>24x7 Online Support</li>
                 </ul>
-                <a href=""class="btn-info">choose plan</a>
+                <a href="" class="btn-info">choose plan</a>
+            </div>
             </div>
         </div>
     </div>
     <div class="page-team">
-        <h2><span>angels</span> Our Team</h2>
+        <div class="wrap">
+             <h2 ><span>angels</span>Our Team</h2>
         <div class="box-team">
             <div>
                 <p>founder</p>
@@ -234,19 +244,21 @@
                 <p>Thomas Alva Adison</p>
             </div>
         </div>
+        </div>
     </div>
     <div class="page-form">
-        <h2> Start Your Trail No Need Credit Card</h2>
+        <h2> Start Your Trail No Need Credit Card
+        </h2>
         <form action="">
             <input type="text" placeholder="Enter your name here" name="">
             <input type="email" placeholder="Enter your email here" name="">
-            <textarea type="textMessage" placeholder="Enter your message here" name=""></textarea>
+            <textarea type="textMessage" placeholder="Enter your message here" name=""></textarea> 
             <button type="submit" class="btn-primary"><span>Submit now</span></button>
         </form>
     </div>
     <div class="footer">
         <div>
-            <p>Made With Love & Copyright By — <a href="">Limpon</a></p>
+            <p>Made With Love & Copyright By - <a href="">Limpon</a></p>
             <ul class="social">
                 <li><a href="" target="_blank"></a></li>
                 <li><a href="" target="_blank"></a></li>
